--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,7 +2,7 @@ header {
   background-color: #10223e;
   color: white;
   padding: 10px 20px;
-  font-family: "Varela Round";
+  /*font-family: "Varela Round";*/
   font-size: 0.9rem;
 }
 
