--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -97,6 +97,8 @@ p {
 .error-message {
     background-color: #f8d7da;
     color: #721c24;
+    margin-left: 23%;
+    width: 300px;
     font-size: 0.8rem;
     padding: 5px 10px;
     margin-top: 5px;
