--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -1,49 +1,48 @@
 body {
     background-color: #eeeeee;
+    margin: 0;
 }
 
 p {
-    margin-top: 10%;
+    margin-top: 2rem;
+    margin-bottom: 0;
 }
 
 .login-page {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*font-family: "Varela Round";*/
-    font-size: 0.9rem;
-    padding: 30px;
+    font-size: 1rem;
+    padding: 2rem;
 }
 
 .login-div {
-    margin-top: 5%;
-    width: 600px;
-    height: 700px;
-    margin:auto;
-    border-radius: 8px;
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    border-radius: 10px;
     background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 2rem;
 }
-.login-page H1 {
-    margin-top: 10%;
-    margin-bottom: -2%;
+
+.login-page h1 {
+    margin-bottom: 0;
+    text-align: center;
 }
+
 .login-page form {
-    margin:auto !important;
+    margin: auto;
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 400px;
 }
 
 .login-page label {
-    margin: 5px 0;
+    margin: 1rem 0;
     display: block;
-    padding-bottom: 1%;
-    padding-top: 15%;
-    align-items: left !important;
     font-weight: bold;
     font-size: 1.2rem;
-    margin-left: 8%;
     text-align: left;
 }
 
@@ -52,12 +51,11 @@ p {
 }
 
 .login-page input {
-    height: 150%;
-    padding: 5px;
-    padding-right: 30px;
+    height: 2rem;
+    padding: 0.3rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 75%;
+    border-radius: 10px;
+    width: 100%;
 }
 
 .login-page span.valid,
@@ -83,8 +81,8 @@ p {
     color: white;
     border: none;
     border-radius: 10px;
-    padding: 10px;
-    margin-top: 10%;
+    padding: 1rem;
+    margin-top: 2rem;
     cursor: pointer;
     font-size: 1.2rem;
 }
@@ -97,59 +95,121 @@ p {
 .error-message {
     background-color: #f8d7da;
     color: #721c24;
-    margin-left: 23%;
-    width: 300px;
+    margin-left: 8%;
+    width: 80%;
     font-size: 0.8rem;
-    padding: 5px 10px;
-    margin-top: 5px;
-    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    border-radius: 10px;
     font-weight: bold;
 }
 
 .captcha-container {
     display: flex;
     justify-content: center;
-    margin-top: 15%;
-  }
+    margin-top: 2rem;
+}
 
-  .error-popup2 {
+.error-popup2 {
     position: fixed;
-    top: 400px;
-    right: 20px;
+    top: 40%;
+    right: 2rem;
     width: 300px;
     height: 100px;
     text-align: left;
     background-color: #f8d7da;
     color: #721c24;
     font-size: 0.8rem;
-    padding: 10px 20px;
-    border-radius: 5px;
+    padding: 1rem;
+    border-radius: 10px;
     font-weight: bold;
     display: flex;
     align-items: center;
     z-index: 100;
-  }
+}
 
-  .error-popup1 {
+.error-popup1 {
     position: fixed;
-    top: 325px;
-    right: 20px;
+    top: 35%;
+    right: 2rem;
     text-align: left;
     background-color: #f8d7da;
     color: #721c24;
     font-size: 0.8rem;
-    padding: 10px 20px;
-    border-radius: 5px;
+    padding: 1rem;
+    border-radius: 10px;
     font-weight: bold;
     display: flex;
     align-items: center;
     z-index: 100;
-  }
-  
-  .close-btn {
+}
+
+.close-btn {
     font-size: 1.2rem;
     font-weight: bold;
     cursor: pointer;
-    margin-left: 15px;
-  }
- 
+    margin-left: 1rem;
+}
+
+@media only screen and (max-width: 768px) {
+    .login-page {
+        padding: 1rem;
+    }
+
+    .login-div {
+        padding: 1rem;
+        margin: 1rem auto;
+    }
+
+    .login-page h1 {
+        font-size: 1.5rem;
+    }
+
+    .login-page label {
+        font-size: 1rem;
+    }
+
+    .login-page input {
+        height: 1.5rem;
+        font-size: 1rem;
+    }
+
+    .login-page button {
+        padding: 0.5rem;
+        margin-top: 1rem;
+        font-size: 1rem;
+    }
+
+    .error-message {
+        margin-left: 5%;
+        width: 90%;
+        font-size: 0.8rem;
+        padding: 0.5rem;
+        margin-top: 1rem;
+    }
+
+    .captcha-container {
+        margin-top: 1rem;
+    }
+
+    .error-popup2 {
+        top: 50%;
+        right: 1rem;
+        width: 90%;
+        height: auto;
+        font-size: 0.8rem;
+        padding: 0.5rem;
+    }
+
+    .error-popup1 {
+        top: 45%;
+        right: 1rem;
+        font-size: 0.8rem;
+        padding: 0.5rem;
+    }
+
+    .close-btn {
+        font-size: 1rem;
+        margin-left: 0.5rem;
+    }
+}
