--- a/src/styles/PlantillaPage.css
+++ b/src/styles/PlantillaPage.css
@@ -33,7 +33,7 @@
   }
   
   .plantilla-form-container {
-    max-width: 600px;
+    max-width: 800px;
     margin: 20px auto 0;
     padding: 20px;
     background-color: #fff;
@@ -44,6 +44,15 @@
   .plantilla-form-title {
     margin-bottom: 20px;
     font-size: 2em;
+  }
+
+  .plantilla-form-editar {
+    font-size: .8em;
+    text-decoration: none;
+    padding: 10px;
+    background-color: #10223e;
+    color: #fff;
+    border-radius: 10px;
   }
   
   .plantilla-form-link {
@@ -117,6 +126,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 10px;;
   }
   
   .plantilla-delete__confirmation {
