--- a/src/styles/PlantillaPage.css
+++ b/src/styles/PlantillaPage.css
@@ -112,6 +112,11 @@
   .plantilla-form__button:active {
     background-color: #081623;
   }
+
+  .plantilla-form__button:disabled {
+    background-color: grey;
+    opacity: .5;
+  }
   
   .plantilla-delete {
     display: flex;
